# RP2040

./: README.md
Software/usb_device/: CMakeLists.txt  main.c  usb_descriptors.c
Software/ws2812/: CMakeLists.txt  com_port.py  ws2812.c
